--- a/ModularArithmeticLib/ModularArithmeticLib/ModularArithmeticLib.vcxproj.filters
+++ b/ModularArithmeticLib/ModularArithmeticLib/ModularArithmeticLib.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="FiniteField.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Polynomial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FiniteField.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Polynomial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
