Added class BigInt for general big integers, that also can be < 0. All arithmetical operators are overloaded for it.

--- a/ModularArithmeticLib/ModularArithmeticLib/ModularArithmeticLib.vcxproj
+++ b/ModularArithmeticLib/ModularArithmeticLib/ModularArithmeticLib.vcxproj
@@ -151,12 +151,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BigInt.h" />
+    <ClInclude Include="BigModInt.h" />
     <ClInclude Include="FiniteField.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Polynomial.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BigInt.cpp" />
+    <ClCompile Include="BigModInt.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="FiniteField.cpp" />
     <ClCompile Include="pch.cpp">
