--- a/ModularArithmeticLib/ModularArithmeticLib/ModularArithmeticLib.vcxproj.filters
+++ b/ModularArithmeticLib/ModularArithmeticLib/ModularArithmeticLib.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="Polynomial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BigInt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BigModInt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -39,6 +45,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Polynomial.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BigInt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BigModInt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
