--- a/ModularArithmeticLibOLD/ModularArithmeticLib/ModularArithmeticLib.vcxproj
+++ b/ModularArithmeticLibOLD/ModularArithmeticLib/ModularArithmeticLib.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="BigModInt.h" />
     <ClInclude Include="FiniteField.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="ModPolynomial.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Polynomial.h" />
   </ItemGroup>
@@ -163,6 +164,7 @@
     <ClCompile Include="BigModInt.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="FiniteField.cpp" />
+    <ClCompile Include="ModPolynomial.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
