--- a/ModularArithmeticLibOLD/ModularArithmeticLib/ModularArithmeticLib.vcxproj.filters
+++ b/ModularArithmeticLibOLD/ModularArithmeticLib/ModularArithmeticLib.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="BigModInt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModPolynomial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BigModInt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModPolynomial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
